Description de ta modification

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenue sur notre site de commande</h1>
+        <h1>Bienvenue sur le site de commande</h1>
     </header>
     <main>
         <section id="dish-selection">
@@ -29,7 +29,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Site de Commande. Tous droits réservés.</p>
+        <p>&copy; 2025 Site de Commande. Tous droits réservés.</p>
     </footer>
     <script src="app.js"></script>
 </body>
